scavenged label from lazy interp